<resources>
    <string name="app_name">My Application</string>
    <string name="to_do">To do</string>
    <string name="date">date</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_in">Sign in</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="createdate">dd.mm.yyyy</string>
    <string name="task">task</string>
    <string name="description">description</string>
    <string name="new_password">new password</string>
    <string name="old_password">old password</string>
    <string-array name="priority">
        <item>Low</item>
        <item>Middle</item>
        <item>Hight</item>
    </string-array>
    <string-array name="status">
        <item>In queue</item>
        <item>In process</item>
        <item>Done</item>
    </string-array>
</resources>
