<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Description"
    android:background="@drawable/coffee_roses">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/task"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/task"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/createdesc"
            android:layout_width="match_parent"
            android:layout_height="269dp"
            android:ems="10"
            android:hint="@string/description"
            android:gravity="start|top"
            android:inputType="textMultiLine" />

        <EditText
            android:id="@+id/date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/createdate"
            android:ems="10"
            android:inputType="date" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Spinner
                android:id="@+id/Priority"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:layout_marginLeft="@dimen/padding_5"
                android:layout_marginRight="@dimen/padding_5"
                android:layout_weight="1"
                android:background="@color/data"
                android:entries="@array/priority" />

            <Spinner
                android:id="@+id/status"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:layout_marginLeft="@dimen/padding_5"
                android:layout_marginRight="@dimen/padding_5"
                android:layout_weight="1"
                android:background="@color/data"
                android:entries="@array/status" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/bsave"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Save" />

            <Button
                android:id="@+id/bdelete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="delete" />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>